<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RadioGroup
        android:id="@+id/rgSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:layout_marginTop="16dp">

        <RadioButton
            android:id="@+id/rbSign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/button_sign"
            android:textSize="14sp"
            android:textStyle="bold"
            android:paddingHorizontal="32dp"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"/>

        <RadioButton
            android:id="@+id/rbCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_check"
            android:textSize="14sp"
            android:textStyle="bold"
            android:paddingHorizontal="32dp"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"/>
    </RadioGroup>

    <TextView
        android:id="@+id/tvKeyLabel"
        style="@style/Text.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:text="@string/label_enter_key"
        app:layout_constraintTop_toBottomOf="@id/rgSwitch"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/etKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_enter_key"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintTop_toBottomOf="@id/tvKeyLabel"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="24dp"
        android:text="@string/button_choose_file"
        app:layout_constraintTop_toBottomOf="@id/etKey"/>

    <TextView
        android:id="@+id/tvChosenFile"
        style="@style/Text.Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="24dp"
        android:text="@string/label_no_file"
        app:layout_constraintTop_toBottomOf="@id/btFile"/>

    <Button
        android:id="@+id/btSign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="24dp"
        android:text="@string/button_sign"
        app:layout_constraintTop_toBottomOf="@id/tvChosenFile"/>

</androidx.constraintlayout.widget.ConstraintLayout>